--- a/index.liquid
+++ b/index.liquid
@@ -3,5 +3,5 @@ layout: layout.liquid
 title: 11ty Boilerplate
 ---
 
-<h1>Yet Another 11ty <strong>Boilerplate</strong></h1>
-<img alt="pine" src="/images/pine.png" width="50" />
+<input type="button" onclick="changeH1Text()" value="Change name">
+<h1 id = "heading">Heading</h1>
